--- a/index1.html
+++ b/index1.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Crap porfolio</title>
+        <img src="assets/images/img.jpeg" alt="MadaDodo">
 
     </head>
     <body>
